# dask-iceberg

./: .gitattributes  .pre-commit-config.yaml  LICENSE.txt  NOTICE  README.md  main.py  pyproject.toml  ruff.toml
.github/workflows/: test.yaml
ci/: environment.yml
dask_iceberg/: __init__.py  _from_iceberg.py  _read.py  _version.py
tests/: test_iceberg.py
tests/files/iceberg-table/metadata/: v2.metadata.json
