[project]
name = "dask-iceberg"
version = "0.1.0"
description = "An Apache Iceberg integration for Dask"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dask>=2025.3.0",
    "pyiceberg>=0.9.0",
]

[tool.uv.sources]
dask = { git = "https://github.com/dask/dask" }
pyiceberg = { git = "https://github.com/apache/iceberg-python" }
distributed = { git = "https://github.com/dask/distributed" }

[dependency-groups]
dev = [
    "distributed",
    "pre-commit>=4.2.0",
]
lint = [
    "ruff>=0.11.2",
]
