[project]
name = "dask-iceberg"
description = "An experimental Dask integration for Apache Iceberg"
authors = [
    {name = "Hendrik Makait", email = "hendrik@makait.com"},
]
version = "0.1.0"
readme = "README.md"
license = {text = "Apache License 2.0"}
requires-python = ">=3.11"
dependencies = [
    "dask",
    "distributed",
    "pyiceberg",
    "pytest>=8.4.1",
]

[dependency-groups]
dev = [
    "pip>=25.2",
    "pre-commit>=4.3.0",
]

[tool.uv.sources]
dask = { git = "https://github.com/dask/dask.git" }
distributed = { git = "https://github.com/dask/distributed.git" }
pyiceberg = { git = "https://github.com/apache/iceberg-python.git" }
